2004-02-09  Alexander Winston  <alexander.winston@comcast.net>

	* acinclude.m4: Quoted definitions of macros
	AM_PATH_PROG_WITH_TEST, AM_LC_MESSAGES, AM_WITH_NLS, and
	AM_GNU_GETTEXT. Fixes #133178.

2004-02-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: add a --enable-deprecations flag
	to switch on the DISABLE_DEPRECATED cflags. Also
	re-use the gnome-common --enable-compile-warnings
	impl. which doesn't touch CFLAGS.

2004-01-27  Christian Rose  <menthos@menthos.com>
 
        * configure.in: Added "mi" to ALL_LINGUAS.
 
2004-01-15  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.3 released ]

2004-01-15  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: requires intltool 0.29, sets version
	to 2.5.3

	* README: bump version to 2.5.3

	* NEWS: updated

	* Makefile.am: Removed OrigTree.pm to EXTRA_DIST

2004-01-06  Paolo Maggi  <paolo.maggi@polito.it>

	* TODO: Updated

2004-01-03  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: bump version to 2.5.2
	
	* README: bump version to 2.5.2

2004-01-03  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" in ALL_LINGUAS.

2003-12-29  Paolo Maggi  <paolo.maggi@polito.it> 

	* Makefile.am: Added OrigTree.pm to EXTRA_DIST.

	* configure.in: requires intltool 0.28

2003-12-29  Paolo Maggi  <paolo.maggi@polito.it> 

	* data/gedit.1: removed an unknown macro in man page
	(fixed bug #127693).

	* configure.in: check for the ngettext function

2003-11-24  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.0 released ]

2003-10-21  Paolo Maggi  <paolo.maggi@polito.it> 

	* data/Makefile.am: don't distribute generated files (fixes
	bug #103846)

2003-10-20  Paolo Maggi  <paolo.maggi@polito.it> 

	* configure.in: bump version to 2.5.0, set 
	GEDIT_MAJOR to 2.6 and GETTEXT_PACKAGE to gedit-2.6,
	updated requirements

2003-09-18  Paolo Maggi  <paolo.maggi@polito.it>

	* TODO: Updated

	* configure.in: show message-of-doom
	
	* message-of-doom: updated
