@@ -132,8 +132,6 @@
 #define GPM_DEFAULT_AUTO_SAVE		0 /* FALSE */
 #define GPM_DEFAULT_AUTO_SAVE_INTERVAL	10 /* minutes */
 
-#define GPM_DEFAULT_SAVE_ENCODING	(const gchar*) "GEDIT_SAVE_ALWAYS_UTF8"
-
 #define GPM_DEFAULT_UNDO_ACTIONS_LIMIT	25 /* actions */
 
 #define GPM_DEFAULT_WRAP_MODE		"GTK_WRAP_WORD"
