@@ -121,9 +121,6 @@
         <cmd name="About" _label="_About" _tip="About this application"
 	pixtype="stock" pixname="About"/>
 
-
-	<cmd name="BonoboUIDump" label="Dump XML" tip="Dump the UI Xml description" hidden="0"/>
-
 </commands>
 
 <menu>
@@ -307,11 +304,6 @@
 	
         <menuitem name="About" verb="" />
 
-</submenu>
-
-<submenu name="Debug" _label="_Debug" hidden="1">
-
-	<menuitem name="BonoboUIDump" verb=""/>
 </submenu>
 
 </menu>
