@@ -1,3 +1,10 @@
+2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* gedit-prefs-manager.h: removed unused #define 
+	GPM_DEFAULT_SAVE_ENCODING
+
+	* gedit-ui.xml: removed unused hidden Debug menu
+
 2004-02-10  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* dialogs/gedit-preferences-dialog.c:
