@@ -1,3 +1,8 @@
+2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* data/gedit.schemas.in: removed unused key
+	schemas/apps/gedit-2/preferences/editor/save/save_encoding
+
 2004-02-09  Alexander Winston  <alexander.winston@comcast.net>
 
 	* acinclude.m4: Quoted definitions of macros
